--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,9 @@ cache:
 install:
   - npm install
 script:
-  - npm test
 deploy:
   - provider: script
-    skip_cleanup: true
+    cleanup: true
     script: chmod +x ./deploy.sh && ./deploy.sh
     on:
       branch: master
